# arealgruppen

./: .gitignore  LICENSE  app_arealgruppen.py  buffrede_sentrumssoner.gpkg  frekvente_stasjoner.ipynb  gangavstand_sentrum.ipynb  kartutsnitt.ipynb  packages.txt  pyproject.toml  stasjoner_med_frekvens_10_15_7_18.parquet  stasjoner_med_frekvens_10_15_7_20.parquet
.devcontainer/: devcontainer.json
