[project]
name = "arealgruppe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "geopandas>=1.1.2",
    "pandas>=3.0.0",
    "pydeck>=0.9.1",
    "streamlit>=1.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
