[project]
name = "arealgruppe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "lonboard>=0.13.0",
    "networkx>=3.6.1",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
    "polars>=1.38.0",
    "pyarrow>=23.0.0",
    "pydeck>=0.9.1",
    "pyogrio>=0.12.1",
    "shapely>=2.1.2",
    "streamlit>=1.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
